Sun Feb 17 22:40:34 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - cancel any pending shutdowns soon after detecting the
     UPS to avoid tripping the bogus OFF flag test
   - set datastale() only after 3 failed polling cycles.

Sun Feb 17 19:58:59 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added Unitek Alpha 1250xD and Belkin Active
   Battery Backup BU30 series to the list.

Wed Feb 13 20:51:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libmge-xml.[ch]: fix memory leak in libmge_xml_close(), use
   upsfd to store descriptor for the socket we use for communication
   with the UPS.

Thu Feb 14 08:47:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - man/megatec_usb.8, man/upscode2.8, man/bcmxcp.8, man/bcmxcp_usb.8,
   man/solis.8, man/rhino.8: fix various errors

Wed Feb 13 19:47:32 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: fix previous patch

Wed Feb 13 19:38:44 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: output signal overrides must be handled
   in upsdrv_initups(), since we might go straight to upsdrv_shutdown()
   afterwards.

Wed Feb 13 02:10:27 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/bestfcom.c: Patch from Chris Adams to accept output from older
   Ferrups models.

Tue Feb 12 04:43:11 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/libmge-xml.c: Remove MSG_NOSIGNAL, as it is non-standard, and
   apparently not necessary in this case.

Sun Feb 10 16:06:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - (clients|drivers|server)/Makefile.am: only add target specific
   LDFLAGS if the target is enabled (in case something is really broken
   and the linker chokes on it)

Sun Feb 10 15:32:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - configure.in,(clients|drivers|server)/Makefile.am: only add target
   specific CFLAGS if the target is enabled [Alioth Bug #310582]
